Fix not showing the bottom

--- a/pages/components/Header/header.module.css
+++ b/pages/components/Header/header.module.css
@@ -9,13 +9,12 @@
   width: calc(100% - 2 * 2.5% - 2 * 1rem);
   padding: 0 calc(2.5% + 1rem);
   z-index: 20;
-  
+
 }
 
 .leftheader > a {
   font-size: var(--med-font);
   color: var(--neutral);
-  padding: 0;
   text-decoration: inherit;
   font-weight: bolder;
 
@@ -69,6 +68,8 @@
   z-index: 10;
   background-color: var(--background);
   justify-content: space-between;
+  box-sizing: border-box;
+
 }
 
 .mobileTop {
